Update preferences page.

--- a/views/preferences.ejs
+++ b/views/preferences.ejs
@@ -23,6 +23,14 @@
                 <label class="form-check-label" for="channelPointsRedeemRewardEventSwitch">Channel point redeem reward event</label>
             </div>
         </form>
+
+        <div class="">
+            <h5 class="form-label">API Token</h5>
+            <p>Used to access the websocket connection. Store the token a safe place after creation.</p>
+            <button type="button" class="btn btn-dark" data-bs-toggle="tooltip" data-bs-placement="top" title="This will invalidate the old!">
+                New Token
+            </button>
+        </div>
     </main>
 
     <%- include('partials/scripts'); %>
