--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,8 @@
 <meta charset="UTF-8">
 <title>EventJepp</title>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
 <!-- CSS (load bootstrap from a CDN) -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
@@ -8,3 +10,5 @@
 <style>
     /*body { padding-top:50px; }*/
 </style>
+
+<link href="/css/styles.css" rel="stylesheet" type="text/css">
