--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
                 <a class="nav-link <% if (url === '/') { %> active <% } %>" <% if (url === '/') { %> aria-current="page" <% } %> href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link <% if (url === '/about') { %> active <% } %>" <% if (url === '/about') { %> aria-current="page" <% } %> href="/about">About</a>
+                <a class="nav-link <% if (url === '/docs') { %> active <% } %>" <% if (url === '/docs') { %> aria-current="page" <% } %> href="/docs">Docs</a>
             </li>
         </ul>
 
